--- a/src/views/manage/statistical.ejs
+++ b/src/views/manage/statistical.ejs
@@ -165,7 +165,7 @@
                                 </div>
                                 <label for="username" style="color: #3498db;">Account</label>
                                 <input type="text" class="form-control" id="username" placeholder="Enter Account Number" value=""><br>
-                                <label for="password" style="color: #3498db;">Account Number</label>
+                                <label for="password" style="color: #3498db;">Create Password</label>
                                 <input type="text" class="form-control" id="password" placeholder="Enter Password" value=""><br>
                                 <button type="submit" class="btn btn-danger create_ctv" style="width: 100%;">Create</button>
                             </div>
