--- a/src/views/member/index.ejs
+++ b/src/views/member/index.ejs
@@ -460,7 +460,7 @@
                 
 
 
-                <div data-v-4ac977f5="" class="financialServices__container-footer" onclick="location.href='/wallet/transfer'">
+                <div data-v-4ac977f5="" class="financialServices__container-footer" onclick="location.href='/mian/safe'">
                     <div data-v-4ac977f5="">
                       <img data-v-4ac977f5="" src="/assets/png/vault-a933a89f.png" alt="">
                       <div data-v-4ac977f5="">
