--- a/src/views/home/index.ejs
+++ b/src/views/home/index.ejs
@@ -753,7 +753,7 @@ style="z-index: 2001;">
             </svg>
           </span>
           <span data-v-52f62447="">
-            Popular Lottery
+            Popular Web3 Games
           </span>
         </div>
         <div data-v-52f62447="" class="btn-all" style="display: none;">
