--- a/src/views/checkIn/activity.ejs
+++ b/src/views/checkIn/activity.ejs
@@ -582,7 +582,7 @@
                       Enter the redemption code to receive gift rewards
                     </p>
                   </div>
-                  <div data-v-53f1c857="" class="content-title">
+                  <div data-v-53f1c857="" class="content-title" onclick="location.href='/attendance'">
                     <img data-v-53f1c857="" data-src="/assets/png/giftRedeem-45917887.png"
                     src="/assets/png/giftRedeem-45917887.png" lazy="loaded">
                     <div data-v-53f1c857="" class="content-para">
