invitation bonus rules
commit

--- a/src/views/checkIn/invibonus.ejs
+++ b/src/views/checkIn/invibonus.ejs
@@ -2287,7 +2287,7 @@
         2024-02-28 - 2099-02-27
       </div>
       <div data-v-94ab1e5c="" class="nav">
-        <div data-v-94ab1e5c="" class="rule" onclick="location.href='/checkDes'">
+        <div data-v-94ab1e5c="" class="rule" onclick="location.href='/invitation_rules'">
           Invitation reward rules
         </div>
         <div data-v-94ab1e5c="" class="record"  onclick="location.href='/checkRecord'">
