--- a/src/views/member/myProfile.ejs
+++ b/src/views/member/myProfile.ejs
@@ -25,7 +25,7 @@
             width: 1.33333rem;
             height: .58667rem;
             margin: 0 .13333rem;
-            background-image: url(/assets/png/vip_img1.png);
+            background-image: url(/assets/png/0-78e1ab02.png);
             background-size: 1.33333rem .58667rem;
             float: right;
         }
@@ -201,10 +201,7 @@
                 var xp_Score = parseInt(response.xp_value);
                 var vip_array = [3000,30000,200000,2000000,20000000,50000000,100000000,1000000000,5000000000];
                 var img_ind = 0;
-                if(xp_Score ==0){
-                    img_ind = 1;
-                }
-                else{
+                var img_ind = 0;
                 $(vip_array).each(function(index,el){
                     var xp_perc = xp_Score / el;
                     if(xp_perc.toString().indexOf('e-') != -1) 
@@ -217,10 +214,9 @@
                     if(parseInt(xp_perc1)>= 100 )
                     {
                         img_ind = index +1;
+                        $("#vip_lev_img").css('background-image', 'url(/assets/png/vip_img'+img_ind+'.png)');
                     }
                 });
-            }
-                $("#vip_lev_img").css('background-image', 'url(/assets/png/vip_img'+img_ind+'.png)');
                 }
                 });
         function setCookie(cname, cvalue, exdays) {
