--- a/src/views/checkIn/rechargeAwardCollectionRecord.ejs
+++ b/src/views/checkIn/rechargeAwardCollectionRecord.ejs
@@ -273,6 +273,31 @@
                            console.log(error)
                         }
                      }
+
+                     const initWeeklyRechargeRewordRecord = async () => {
+                        try {
+                           const response = await axios.post("/api/activity/weekly_betting_bonus/record")
+               
+                           if (response.data.status === true) {
+                              const list = response.data.data
+                              const html = list
+                                 .map(item => {
+                                    return `
+                                       <div data-v-12a80a3e="" class="item">
+                                           <div data-v-12a80a3e="" class="line rq_am_field">Required Betting Amount<span data-v-12a80a3e="" class="time">${formatIndianNumber(item.requireBettingAmount)}</span></div>
+                                           <div data-v-12a80a3e="" class="line time_field">Registration time<span data-v-12a80a3e="" class="time">${item.time}</span></div>
+                                           <div data-v-12a80a3e="" class="line">Received Bonus amount<span data-v-12a80a3e="" class="amount">₹${formatIndianNumber(item.amount)}</span></div>
+                                       </div>`
+                                 })
+                                 .join("")
+               
+                              $(".record-panel").html(html)
+                           }
+                        } catch (error) {
+                           console.log(error)
+                        }
+                     }
+               
                
                      $("#daily_tab_btn").click(function () {
                         $(".record-panel").html("")
@@ -285,8 +310,10 @@
                         $(".record-panel").html("")
                         $(this).addClass("active")
                         $("#daily_tab_btn").removeClass("active")
-                        initWeeklyRechargeRewordRecord()
+                        initWeeklyRechargeRewordRecord();
                      })
+
+                     initWeeklyRechargeRewordRecord();
 
                     
       </script>
