--- a/src/views/member/safe.ejs
+++ b/src/views/member/safe.ejs
@@ -1387,7 +1387,7 @@
                         setTimeout(function() {
                             $("#successTost").fadeOut(220);
                         }, 1000);
-                        
+                        getstakedetails();
 
                      } else {
                         $(".van-toast__text").text(response.message)
