--- a/src/views/member/safe.ejs
+++ b/src/views/member/safe.ejs
@@ -40,7 +40,7 @@
             width: 90%;
             margin: auto;
             border-radius: 7px;
-            height: 59%;
+            height: auto;
         }
         .modal {
             display: blocked;
@@ -61,6 +61,7 @@
           .div_pi_input
           {
             display: flex;
+            margin-top:5px;
           }
           .div_pi_input .ml-1 
           {
@@ -75,7 +76,7 @@
           .btn_class
           {
             text-align: center;
-            height: 20px;
+            height: 50px;
             margin-top: 4%;
           }
           .btn_class button
@@ -150,7 +151,7 @@
           .modal-content {
             text-align: -webkit-center;
             position: relative;
-            top: 20%;
+            top: 10%;
           }
       
           .modal-content img {
@@ -179,21 +180,19 @@
       
           /* Circle button style */
           .close-btn {
-            border: 2px solid #fff;
-            /* Black border */
+            border: 2px solid #22275b;
             border-radius: 50%;
-            /* Circle shape */
             background-color: transparent;
-            /* Transparent background */
             width: 30px;
-            /* Width and height should be equal for a circle */
             height: 30px;
-            /* Width and height should be equal for a circle */
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            margin-top: 20%;
+            margin-top: 0%;
+            position: absolute;
+            right: 10px;
+            top: 10px;
           }
       
           .close-btn:hover {
@@ -208,7 +207,7 @@
             font-family: none;
             line-height: 1;
             /* Tight line height for the "X" */
-            color: #fff;
+            color: #22275b;
             /* Black color for the "X" */
             padding: 0;
             /* No padding */
@@ -1168,6 +1167,9 @@
                         <div class="">
                           <div id="myModal_header">Start Staking</div>
                         </div>
+                        <div class="close-btn">
+                            <span class="close-x">&times;</span>
+                          </div>
                         <div class="pi_amount_class">
                           <label  class="text-sm font-medium">Piπ Amount</label>
                           <div class="div_pi_input">
@@ -1233,9 +1235,7 @@
                           <div class="pi_amount_class btn_class">
                               <button type="button"  id="confirm_stack">Confirm Stake</button>
                           </div>
-                        <div class="close-btn">
-                          <span class="close-x">&times;</span>
-                        </div>
+                        
                       </div>
                   </div>
                 
