--- a/src/views/member/safe.ejs
+++ b/src/views/member/safe.ejs
@@ -1235,7 +1235,7 @@
                               </div>
                           </div>
                           <div class="pi_amount_class btn_class">
-                              <button type="button"  id="confirm_stack">Confirm Stake</button>
+                              <button type="button"  id="confirm_stack" onclick="confirm_stack();">Confirm Stake</button>
                           </div>
                         
                       </div>
