--- a/src/views/checkIn/attendance.ejs
+++ b/src/views/checkIn/attendance.ejs
@@ -131,7 +131,7 @@ background:#22275b;
 
 
 .dailySignIn__container-content__wrapper[data-v-3ba0459b] {
-   display: grid;
+   display: grid !important;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    gap: 0.2rem;
