--- a/src/views/promotion/promotion.ejs
+++ b/src/views/promotion/promotion.ejs
@@ -642,7 +642,7 @@
                         <img data-v-932703ba="" src="/assets/png/right_arrow-ab888448.png" alt="">
                       </div>
                     </div>
-                    <div data-v-932703ba="" class="promote__cell-item"  onclick="location.href='promotion/tutorial'">
+                    <div data-v-932703ba="" class="promote__cell-item"  onclick="location.href='promotion/rebate_ratio'">
                       <div data-v-932703ba="" class="label">
                         <img data-v-932703ba="" src="/assets/png/rebateRatio-78c6e43f.png" alt="">
                         <span data-v-932703ba="">
