--- a/src/views/checkIn/activity.ejs
+++ b/src/views/checkIn/activity.ejs
@@ -572,7 +572,7 @@
                   </div>
                 </div>
                 <div data-v-53f1c857="" class="activity-panel-content">
-                  <div data-v-53f1c857="" class="content-title">
+                  <div data-v-53f1c857="" class="content-title" onclick="location.href='/redenvelopes'">
                     <img data-v-53f1c857="" data-src="/assets/png/signInBanner-33f86d3f.png"
                     src="/assets/png/signInBanner-33f86d3f.png" lazy="loaded">
                     <div data-v-53f1c857="" class="content-para">
